[package]
name = "redis-streams-dump"
version = "1.0.0-rc.1"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "A small utility to dump Redis Streams content into a SeaStreamer file"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/redis-streams-dump"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "redis", "stream-processing"]
rust-version = "1.85"

[dependencies]
anyhow = { version = "1" }
env_logger = { version = "0.11" }
log = { version = "0.4", default-features = false }
sea-streamer-file = { version = "1.0.0-rc", path = "../../sea-streamer-file", features = ["runtime-tokio"] }
sea-streamer-redis = { version = "1.0.0-rc", path = "../../sea-streamer-redis", features = ["runtime-tokio"] }
sea-streamer-types = { version = "1.0.0-rc", path = "../../sea-streamer-types" }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
tokio = { version = "1.10.0", features = ["full"]}

[dev-dependencies]

[features]
runtime-tokio-native-tls = ["sea-streamer-redis/runtime-tokio-native-tls"]
